# rt-hiss

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  deviceCode.cu  deviceCode.h  hostCode.cpp  utility.cu  utility.h  utility_seq.cpp
experiments/: common.sh  parse_results.py  plot_batching.py  plot_data_copy.py  plot_one_point.py  plot_style.py  plot_time_distribution.py  run_all_experiments.sh  run_batching.sh  run_data_copy.sh  run_default.sh  run_one_point.sh  run_time_distribution.sh
sampleDataset/: iono_57_1000.txt
